--- a/src/assets/sass/modules/_form.scss
+++ b/src/assets/sass/modules/_form.scss
@@ -130,8 +130,11 @@
 	}
 	.form_group {
 		float: left;
-		width: 25%;
+		width: 45%;
 		margin-right: 5%;
+		@media screen and (min-width: 900px) {
+			width: 25%;
+		}
 	}
 	span {
 		display: inline-block;
@@ -150,7 +153,10 @@
 	}
 }
 .time {
-	width: 30%;
+	width: 50%;
+	@media screen and (min-width: 900px) {
+		width: 30%;
+	}
 	float: left;
 	padding: 5px 0;
 	&.form_group  {
